fix: collapse button transition

--- a/src/containers/layout/index.css
+++ b/src/containers/layout/index.css
@@ -161,9 +161,6 @@
   justify-content: center;
   transition: all 0.2s;
 }
-.fcr-layout-content-list-view-collapse-button-col::after {
-  content: '';
-}
 .fcr-layout-content-list-view-collapse-button-col .fcr-layout-content-list-view-collapse-button {
   @apply fcr-bg-2;
   display: flex;
@@ -177,6 +174,7 @@
   cursor: pointer;
   backdrop-filter: blur(6px);
   background: #35374180;
+  opacity: 0;
 }
 .fcr-layout-content-list-view-collapse-button-col.fcr-layout-content-list-view-collapse-button-collapsed {
   /* transform: translateX(0); */
